# adventofcode24

./: adventofcode24.cabal
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day10.hs  Main.hs
