cabal-version:      3.0
name:               adventofcode24
version:            1.0.0.0
-- synopsis:
-- description:
author:             Jan
maintainer:         cmij2f38aj@mailbox.org
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable adventofcode24
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day01
                      Day02
                      Day03
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      parsec
    hs-source-dirs:   src
    default-language: Haskell2010
